index.css
body {
  background-image: url("pic1.webp");
  height: 100vh;
  background-size: cover;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: bold;
  text-align: center;
}

.container {
  width: 80%;
  height: 100%;
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.content_box {
  background: rgba(255, 165, 0, 0.8);
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
  padding: 1rem 2rem;
  border-radius: 10px;
}

h1 {
  margin-top: 10px;
  margin-bottom: 10px;
}

h2 {
  font-size: 50px;
  margin-top: 0;
  margin-bottom: 20px;
}

button {
  border: none;
  padding-top: 10px;
  padding-bottom: 10px;
  color: white;
  font-weight: bold;
  width: 200px;
  margin-bottom: 5px;
  border-radius: 5px;
  cursor: pointer;
}

#increment-btn {
  background: rgb(4, 114, 223);
}

#increment-btn:hover {
  background: rgb(4, 105, 205);
}

#save-btn {
  background: rgb(3, 144, 3);
}

#save-btn:hover {
  background: rgb(3, 133, 3);
}

